lnrpc: add htlc attempt id
